metadata/force-app/main/default/objects/CustomName_uVpBW__c/CustomName_uVpBW__c.object-meta.xml
<CustomObject>
    <description>Description_kKyaL</description>
    <label>CustomLabel_qHsRN</label>
    <nameField>
        <label>CustomLabel_qHsRN</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_qHsRNs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>