metadata/force-app/main/default/objects/CustomName_uVpBW__c/fields/CustomField_bIhOh__c.field-meta.xml
<CustomField>
    <fullName>CustomField_bIhOh__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldeYRkA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>