metadata/force-app/main/default/objects/CustomName_uVpBW__c/fields/CustomField_cQPPq__c.field-meta.xml
<CustomField>
    <fullName>CustomField_cQPPq__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldhcFpY</label>
    <length>255</length>
    <type>Text</type>
</CustomField>